Add buttons for change border-color of page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="row">
             <div class="three wide center aligned column">
               <div class="avatar-wrapper">
-                <object class="avatar avatar-style" data="/img/president-donald-trump.jpg" role="img"
+                <object class="avatar avatar-style" data="/img/donald_trump.jpg" role="img"
                   aria-label="My profile picture"></object>
               </div>
             </div>
@@ -115,17 +115,16 @@
                       <input type="checkbox" id="service-center-databases-lead">
                       <label for="service-center-databases-lead" class="summary">
                         <strong class="description-experience">Started Trump University with Michael Sexton and Jonathan
-                          Spitalny</strong>
+                          Spitalny <button id="spitalny" class="color spitalny"></button></strong>
                       </label>
                       <div>
-                        <ul>
+                        <ul class="details-info">
                           <li>no grades, certificates and other bureaucracy, but program offered courses in real estate,
                             asset management entrepreneurship,
                             and wealth creation</li>
                           <li>98% students gave positive reviews while studying, however some of these
                             ungrateful gringos filed lawsuits against Trump University after the course. I had to pay
-                            $25
-                            million to settle that...</li>
+                            $25 million to settle that...</li>
                         </ul>
                       </div>
                     </li>
@@ -154,11 +153,10 @@
                       <input type="checkbox" id="service-center-databases-lead">
                       <label for="service-center-databases-lead" class="summary">
                         <strong class="description-experience">Began a multi-building development along the Hudson
-                          River, which was
-                          named Trump Place</strong>
+                          River, which was named Trump Place <button id="place" class="color place"></button></strong>
                       </label>
                       <div>
-                        <ul>
+                        <ul class="details-info">
                           <li>Me and the other investors sold our shares for $1.8 billion and that was then the biggest
                             residential sale in
                             the history of New York City</li>
@@ -209,11 +207,10 @@
                       <input type="checkbox" id="service-center-databases-lead">
                       <label for="service-center-databases-lead" class="summary">
                         <strong class="description-experience">I bought the Mar-a-Lago estate in Palm Beach and turned
-                          it into a
-                          private club</strong>
+                          it into a private club <button id="club" class="color club"></button></strong>
                       </label>
                       <div>
-                        <ul>
+                        <ul class="details-info">
                           <li>You can join if you pay $200K initiation fee (and there is another annual fee for members,
                             it is very expensive to be
                             rich). That year I also opened a casino called Trump Castle. My wife Ivana became a manager,
@@ -238,10 +235,10 @@
                       <input type="checkbox" id="service-center-databases-lead">
                       <label for="service-center-databases-lead" class="summary">
                         <strong class="description-experience">Started developing the Trump Tower skyscraper in
-                          Manhattan</strong>
+                          Manhattan <button id="manhattan" class="color manhattan"></button></strong>
                       </label>
                       <div>
-                        <ul>
+                        <ul class="details-info">
                           <li>Payed a crew of undocumented Polish workers to demolish the historic Bonwit Teller store,
                             including art deco features</li>
                           <li>Architectural critic Paul Goldberger say in 1983 that the tower's atrium is "the most
@@ -424,6 +421,7 @@
       </div>
     </article>
   </main>
+ <script src="main.js"></script>
 </body>
 
 </html>
