--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="row">
             <div class="three wide center aligned column">
               <div class="avatar-wrapper">
-                <object class="avatar avatar-style" data="/img/donald_trump.jpg" role="img"
+                <object class="avatar avatar-style" data="img/donald_trump.jpg" role="img"
                   aria-label="My profile picture"></object>
               </div>
             </div>
