--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <ul class="timeline">
                 <li>
                   <p><small>2017</small></p>
-                  <p class="description-experience">Became 45th president of the United States</p>
+                  <p class="description-experience">Became 45th president of the United States <button id="spitalny" class="color spitalny"></button></p>
                 </li>
                 <li>
                   <p><small>2016</small></p>
@@ -112,10 +112,10 @@
                   <p><small>2005</small></p>
                   <ul>
                     <li class="details">
-                      <input type="checkbox" id="service-center-databases-lead">
-                      <label for="service-center-databases-lead" class="summary">
+                      <input type="checkbox" id="project-1">
+                      <label for="project-1" class="summary">
                         <strong class="description-experience">Started Trump University with Michael Sexton and Jonathan
-                          Spitalny <button id="spitalny" class="color spitalny"></button></strong>
+                          Spitalny</strong>
                       </label>
                       <div>
                         <ul class="details-info">
@@ -144,16 +144,16 @@
                   <p><small>1999</small></p>
                   <p class="description-experience">Started buying golf courses. They are very cheap, I have 18 of them
                     now in USA and abroad! Also
-                    switched to the Reform Party that year</p>
+                    switched to the Reform Party that year <button id="place" class="color place"></button></p>
                 </li>
                 <li>
                   <p><small>1997</small></p>
                   <ul>
                     <li class="details">
-                      <input type="checkbox" id="service-center-databases-lead">
-                      <label for="service-center-databases-lead" class="summary">
+                      <input type="checkbox" id="project-2">
+                      <label for="project-2" class="summary">
                         <strong class="description-experience">Began a multi-building development along the Hudson
-                          River, which was named Trump Place <button id="place" class="color place"></button></strong>
+                          River, which was named Trump Place </strong>
                       </label>
                       <div>
                         <ul class="details-info">
@@ -204,10 +204,10 @@
                   <p><small>1985</small></p>
                   <ul>
                     <li class="details">
-                      <input type="checkbox" id="service-center-databases-lead">
-                      <label for="service-center-databases-lead" class="summary">
+                      <input type="checkbox" id="project-3">
+                      <label for="project-3" class="summary">
                         <strong class="description-experience">I bought the Mar-a-Lago estate in Palm Beach and turned
-                          it into a private club <button id="club" class="color club"></button></strong>
+                          it into a private club </strong>
                       </label>
                       <div>
                         <ul class="details-info">
@@ -232,10 +232,10 @@
                   <p><small>1980</small></p>
                   <ul>
                     <li class="details">
-                      <input type="checkbox" id="service-center-databases-lead">
-                      <label for="service-center-databases-lead" class="summary">
+                      <input type="checkbox" id="project-4">
+                      <label for="project-4" class="summary">
                         <strong class="description-experience">Started developing the Trump Tower skyscraper in
-                          Manhattan <button id="manhattan" class="color manhattan"></button></strong>
+                          Manhattan </strong>
                       </label>
                       <div>
                         <ul class="details-info">
@@ -327,13 +327,13 @@
                     <span>РУССКИЙ</span></a> </p>
               </section>
               <section>
-                <h3>Skills</h3>
+                <h3><button id="club" class="color club">Skills</button></h3>
                 <p class="tags small">NEGOTIATING COUNTING REMODELING WRITING ACING SINGING REPORTING INCORPORATING
                   SELLING ADVERTISING HOSTING COMPETING TWITTING PARENTING GAMBLING DATING SUING ORGANIZING FUNDING
                   DEBATING ADVISING PRESBYTERIANING</p>
               </section>
               <section>
-                <h3>Character</h3>
+                <h3><button id="manhattan" class="color manhattan">Character</button></h3>
                 <p class="tags small">ADJUSTED CALM AMBITIOUS COMPETITIVE SOCIABLE DIRECT HOSTILE CARELESS IGNORANT
                   INQUISITIVE BOLD CONFIDENT MISCHIEVOUS CHARMING INTERESTING DARING COLORFUL LAZY SELF-PROMOTING</p>
               </section>
